# Digital-Geometry-Processing

./: .gitignore  CMakeLists.txt  Example study plan.txt
MyDemo/: parsable_functions_file.txt
geomesh/__MACOSX/for fprinting/: ._horse0.off
hw1/: hw1_notebook.ipynb  main.cpp
hw1src/: CMakeLists.txt  Mesh.cpp  Mesh.h  Painter.cpp  Painter.h  README.txt  main.cpp
hw1src/executable_files/: geodesic_distance_matrix.txt  geodesic_distances.txt
hw2/: # TODO List - Pairwise Harmonics Symmetr.md  CMakeLists.txt  Mesh.cpp  Mesh.h  Painter.h  README.md  TODO.md  helpers.cpp  helpers.h  hw2_guven_exec.7z  main.cpp  pch.h
hw2/papers/: Implementation_Plan.md  Notes_on_Primary_Papers.md  pairwise_harmonics_explanation.md
projects/: CMakeLists.txt
slides/: CENG_789.html
slides/ppt_format/: 02-polygons-triangulations.ppt  03-pointsets.ppt  04-structures-programming.ppt  13-leastsquares-ransac-hough.ppt
term_project/: AnimatedMeshPipeline.cpp  AnimatedMeshPipeline.h  Binding.h  CMakeLists.txt  CMakeLists_clean.txt  COMPLETION_SUMMARY.md  IsocurveAnalysis.cpp  IsocurveAnalysis.h  Mesh.cpp  Mesh.h  Painter.cpp  Painter.h  PairwiseHarmonicsSegmentation.cpp  PairwiseHarmonicsSegmentation.h  README_CLEAN.md  RIGIDITY_CUTTING_THEORY.md  RIGIDITY_SEGMENTATION_FIX.md  RigidityAnalysis.cpp  RigidityAnalysis.h  TESTING_RIGIDITY_BASED_CUTTING.md  VisualizationUtils.cpp  VisualizationUtils.h  build_clean.bat  helpers.cpp  helpers.h  helpers_clean.cpp  main.cpp  main_clean.cpp  main_segmentation.cpp  test_heat_fix.bat
term_project/models/: 348.off  50.off  Armadillo.off  chair.off  cow.off  hand.off
term_project/models/horse_gallop_off/: horse-gallop-01.off  horse-gallop-02.off  horse-gallop-03.off  horse-gallop-04.off  horse-gallop-05.off  horse-gallop-06.off  horse-gallop-07.off  horse-gallop-08.off  horse-gallop-09.off  horse-gallop-10.off  horse-gallop-11.off  horse-gallop-12.off  horse-gallop-13.off  horse-gallop-14.off  horse-gallop-15.off  horse-gallop-16.off  horse-gallop-17.off  horse-gallop-19.off  horse-gallop-20.off  horse-gallop-21.off  horse-gallop-22.off  horse-gallop-23.off  horse-gallop-25.off  horse-gallop-26.off  horse-gallop-27.off  horse-gallop-29.off  horse-gallop-30.off  horse-gallop-31.off  horse-gallop-32.off  horse-gallop-33.off  horse-gallop-34.off  horse-gallop-35.off  horse-gallop-38.off  horse-gallop-39.off  horse-gallop-40.off  horse-gallop-41.off  horse-gallop-42.off  horse-gallop-43.off  horse-gallop-44.off  horse-gallop-45.off  (+4 more)
term_project/papers/: CENG 589 Term Project Report.html  CENG 589 Term Project Report.md  Clear_notes_Shape_Segmentation_via_Pairwise_Harmonics.md  GNN_implement.md  Pairwise_Har_seg_with_GNN.md  Pairwise_Harmonics_for_Shape_Analysis.txt  animated_mesh_pipeline.md  cpp_segment_code_search.md  how_to_separate_segments.md  improvement1.md  improvement2.md  isocurve.md  migration_to_heat_geodesics.md  more_robust_method.md  new_notes.md  outputs.md  projects_state_before_improvement.md
term_project/readme_files/: CRITICAL_FIXES_APPLIED.md  INVESTIGATION_ANALYSIS.md  README_SEGMENTATION.md  SEGMENTATION_VISUALIZATION_FIX.md  deleted_functions.txt  fix_summary.md  notes_from_previous_session.md  presentation.md  previous_updates.md  test_plan.md
term_project_backups/: deleted_functions.txt  main_backup.cpp
